--- a/Assignment1/appsettings.json
+++ b/Assignment1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=5745-LAP-0727;Database=ECommerce;Trusted_Connection=True;TrustServerCertificate=True"
+    }
 }
